# homework_drf

./: .env.sample  Dockerfile  README.md  all_data_fixture.json  groups.json  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py
users/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_payment_link_payment_session_id_and_more.py
